--- a/views/accueil.html
+++ b/views/accueil.html
@@ -142,7 +142,7 @@
                                 <div class="border my-container-detail my_container_detail_disabled d-flex justify-content-center align-items-center">
                                     <div class="d-flex flex-column">
                                         <button type="button" class="my-visualise btn-primary mb-3 text-white">Visualiser</button>
-                                        <a href="https://senegal-auto.herokuapp.com/voiture/kia-level-18-2728"><button type="button" class="my-details btn-success text-white">Voir details</button></a>
+                                        <a href="/voiture/kia-level-18-2728"><button type="button" class="my-details btn-success text-white">Voir details</button></a>
                                     </div>
                                 </div>
                             </div>     
@@ -163,7 +163,7 @@
                                 <div class="border my-container-detail my_container_detail_disabled d-flex justify-content-center align-items-center">
                                     <div class="d-flex flex-column">
                                         <button type="button" class="my-visualise btn-primary mb-3 text-white">Visualiser</button>
-                                        <a href="https://senegal-auto.herokuapp.com/voiture/mercedes-level-vitesse-2908"><button type="button" class="my-details btn-success text-white">Voir details</button></a>
+                                        <a href="/voiture/mercedes-level-vitesse-2908"><button type="button" class="my-details btn-success text-white">Voir details</button></a>
                                     </div>
                                 </div>
                             </div>     
@@ -184,7 +184,7 @@
                                 <div class="border my-container-detail my_container_detail_disabled d-flex justify-content-center align-items-center">
                                     <div class="d-flex flex-column">
                                         <button type="button" class="my-visualise btn-primary mb-3 text-white">Visualiser</button>
-                                        <a href="https://senegal-auto.herokuapp.com/voiture/208-gt-suedois-5562"><button type="button" class="my-details btn-success text-white">Voir details</button></a>
+                                        <a href="/voiture/208-gt-suedois-5562"><button type="button" class="my-details btn-success text-white">Voir details</button></a>
                                     </div>
                                 </div>
                             </div>     
@@ -205,7 +205,7 @@
                                 <div class="border my-container-detail my_container_detail_disabled d-flex justify-content-center align-items-center">
                                     <div class="d-flex flex-column">
                                         <button type="button" class="my-visualise btn-primary mb-3 text-white">Visualiser</button>
-                                        <a href="https://senegal-auto.herokuapp.com/voiture/american-great-teager-car-5948"><button type="button" class="my-details btn-success text-white">Voir details</button></a>
+                                        <a href="/voiture/american-great-teager-car-5948"><button type="button" class="my-details btn-success text-white">Voir details</button></a>
                                     </div>
                                 </div>
                             </div>     
@@ -226,7 +226,7 @@
                                 <div class="border my-container-detail my_container_detail_disabled d-flex justify-content-center align-items-center">
                                     <div class="d-flex flex-column">
                                         <button type="button" class="my-visualise btn-primary mb-3 text-white">Visualiser</button>
-                                        <a href="https://senegal-auto.herokuapp.com/voiture/bmw-4022"><button type="button" class="my-details btn-success text-white">Voir details</button></a>
+                                        <a href="/voiture/bmw-4022"><button type="button" class="my-details btn-success text-white">Voir details</button></a>
                                     </div>
                                 </div>
                             </div>     
@@ -247,7 +247,7 @@
                                 <div class="border my-container-detail my_container_detail_disabled d-flex justify-content-center align-items-center">
                                     <div class="d-flex flex-column">
                                         <button type="button" class="my-visualise btn-primary mb-3 text-white">Visualiser</button>
-                                        <a href="https://senegal-auto.herokuapp.com/voiture/grille-allemande-new-generation-3252"><button type="button" class="my-details btn-success text-white">Voir details</button></a>
+                                        <a href="/voiture/grille-allemande-new-generation-3252"><button type="button" class="my-details btn-success text-white">Voir details</button></a>
                                     </div>
                                 </div>
                             </div>     
@@ -268,7 +268,7 @@
                                 <div class="border my-container-detail my_container_detail_disabled d-flex justify-content-center align-items-center">
                                     <div class="d-flex flex-column">
                                         <button type="button" class="my-visualise btn-primary mb-3 text-white">Visualiser</button>
-                                        <a href="https://senegal-auto.herokuapp.com/voiture/red-champion-2020-1257"><button type="button" class="my-details btn-success text-white">Voir details</button></a>
+                                        <a href="/voiture/red-champion-2020-1257"><button type="button" class="my-details btn-success text-white">Voir details</button></a>
                                     </div>
                                 </div>
                             </div>      
