--- a/views/accueil.html
+++ b/views/accueil.html
@@ -253,7 +253,7 @@
                             </div>     
                         
                             <div class="my-container-offre m-2 mx-lg-3 p-1 rounded" numero-voiture="1257" nombre-image="7">
-                                <img class="img_for_car rounded" src="/our_vehicule/02_04_2021_1257_1.jpg" alt="RED CHAMPION 2020">
+                                <img class="img_for_car rounded" src="/our_vehicule/26_05_2020_0976_1.jpg" alt="RED CHAMPION 2020">
 
                                 <div class="text_modele text-muted text-center">RED CHAMPION 2020</div>
 
@@ -300,11 +300,11 @@
         <section id="section_services">
             <div class="position-relative" id="container_services_offre">
                 <!-- video background -->
-                <div id="container_video_background">
+                <!-- <div id="container_video_background">
                     <video class="w-100" autoplay muted loop>
                         <source src="/images_videos/video_car.mp4" type="video/mp4">
                     </video>
-                </div>
+                </div> -->
                 
                 <!-- couleur background en dessus du video  -->
                 <div id="color_background_du_video"></div>
