--- a/views/v1.html
+++ b/views/v1.html
@@ -5,12 +5,12 @@
     <meta name="description" content="Carburant: Hybride, Boite vitesse: Automatic, Annee: 2020, Occasion">
 
     <!-- Twitter share -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@senegal-auto">
-    <meta name="twitter:title" content="Details Garage">
-    <meta name="twitter:description" content="Details Garage a vendre sur Senegal-auto">
-    <meta name="twitter:image" content="https://senegal-auto.herokuapp.com/our_vehicule/02_04_2021_2728_1.jpg">
-    <meta name="twitter:domain" content="https://senegal-auto.herokuapp.com">
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Details Garage" />
+    <meta name="twitter:description" content="Details Garage a vendre sur Senegal-auto" />
+    <meta name="twitter:image" content="https://senegal-auto.herokuapp.com/our_vehicule/02_04_2021_2728_1.jpg" />
+    <meta name="twitter:url" content="https://senegal-auto.herokuapp.com/voiture/kia-level-18-2728">
+    <meta name="twitter:creator" content="Djiby Sarr" />
    
     <!-- Whatsapp share -->
     <meta property="og:image" content="/https://senegal-auto.herokuapp.com/our_vehicule/02_04_2021_2728_1.jpg">
