--- a/views/v3.html
+++ b/views/v3.html
@@ -3,6 +3,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Djiby Sarr">
     <meta name="description" content="Carburant: Essence, Boite vitesse: Automatic, Annee: 2014, Occasion">
+
+    <!-- share twitter -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="AMERICAN BLUE CAR">
+    <meta name="twitter:description" content="A VENDRE SUR TERANGA-SENGAL">
+    <meta name="twitter:image" content="https://senegal-auto.herokuapp.com/our_vehicule/02_04_2021_5562_1.jpg">
+    <meta name="twitter:url" content="https://senegal-auto.herokuapp.com/voiture/208-gt-suedois-5562">
+    <meta name="twitter:creator" content="Djiby Sarr">
+
+    <!-- share whatsapp -->
     <meta property="og:image" itemprop="image" content="https://senegal-auto.herokuapp.com/our_vehicule/02_04_2021_5562_1.jpg">
     <meta property="og:title" content="BMW">
     <meta property="og:url" content="https://senegal-auto.herokuapp.com/voiture/208-gt-suedois-5562">
