--- a/views/v1.html
+++ b/views/v1.html
@@ -5,15 +5,15 @@
     <meta name="description" content="Carburant: Hybride, Boite vitesse: Automatic, Annee: 2020, Occasion">
 
     <!-- Twitter share -->
-    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Details Garage" />
     <meta name="twitter:description" content="Details Garage a vendre sur Senegal-auto" />
-    <meta name="twitter:image" content="https://senegal-auto.herokuapp.com/our_vehicule/02_04_2021_2728_1.jpg" />
+    <meta name="twitter:image" itemprop="image" content="https://senegal-auto.herokuapp.com/our_vehicule/02_04_2021_2728_1.jpg" />
     <meta name="twitter:url" content="https://senegal-auto.herokuapp.com/voiture/kia-level-18-2728">
     <meta name="twitter:creator" content="Djiby Sarr" />
    
     <!-- Whatsapp share -->
-    <meta property="og:image" content="/https://senegal-auto.herokuapp.com/our_vehicule/02_04_2021_2728_1.jpg">
+    <meta property="og:image" itemprop="image" content="/https://senegal-auto.herokuapp.com/our_vehicule/02_04_2021_2728_1.jpg">
     <meta property="og:title" content="Details Garage">
     <meta property="og:url" content="https://senegal-auto.herokuapp.com/voiture/kia-level-18-2728">
     <meta property="og:description" content="Details Garage a vendre sur Senegal-auto">
@@ -232,9 +232,9 @@
                 <div id="text_partager" class="ml-5-lg ml-3-sm font-weight-bold mb-3 text-muted">Partager : </div>
                 <div id="reseaux_sociaux_icon" class="d-flex justify-content-start">
                     <a href="facebook://send?text=https://senegal-auto.herokuapp.com/voiture/kia-level-18-2728" title="sur facebook"><img src="/icon_logo/facebook.svg" alt="facebook icon" class="mr-5"></a>
-                    <a href="https://twitter.com:/intent/tweet?url=https://senegal-auto.herokuapp.com/voiture/kia-level-18-2728&text=Kia Sportage a vendre a bas prix" title="sur twitter"><img src="/icon_logo/twitter.svg" alt="twitter icon" class="mr-5"></a>
+                    <a href="https://twitter.com:/intent/tweet?text=Kia Sportage a vendre a bas prix&url=https://senegal-auto.herokuapp.com/voiture/kia-level-18-2728text=Kia Sportage a vendre a bas prix" title="sur twitter"><img src="/icon_logo/twitter.svg" alt="twitter icon" class="mr-5"></a>
                     <a href="instagram://send?text=https://senegal-auto.herokuapp.com/voiture/kia-level-18-2728" title="sur instagram"><img src="/icon_logo/Instagram.svg" alt="instagram icon" class="mr-5"></a>
-                    <a href="whatsapp://send?text=https://senegal-auto.herokuapp.com/voiture/kia-level-18-2728" target="_blank" data-action="share/whatsapp/share" title="Un nouvelle voiture toute neuve !"><img src="/icon_logo/whatsapp.svg" alt="whatsapp icon"></a>
+                    <a href="whatsapp://send?text=Kia Sportage a vendre a bas prix&url=https://senegal-auto.herokuapp.com/voiture/kia-level-18-2728" target="_blank" data-action="share/whatsapp/share" title="Un nouvelle voiture toute neuve !"><img src="/icon_logo/whatsapp.svg" alt="whatsapp icon"></a>
                 </div>
 
             </div>
