--- a/views/v2.html
+++ b/views/v2.html
@@ -3,7 +3,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Djiby Sarr">
     <meta name="description" content="Carburant: Essence, Boite vitesse: Automatic, Annee: 2019, Neuf">
-    
+
+    <!-- share twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Mercedes level vitesse">
+    <meta name="twitter:description" content="Une voiture d'occasion a vendre chez senegal-auto">
+    <meta name="twitter:image" itemprop="image" content="https://senegal-auto.herokuapp.com/our_vehicule/02_04_2021_2908_1.jpg">
+    <meta name="twitter:url" content="https://senegal-auto.herokuapp.com/voiture/mercedes-level-vitesse-2908">
+    <meta name="twitter:creator" content="Djiby Sarr">
+
     <meta property="og:image" content="https://senegal-auto.herokuapp.com/our_vehicule/02_04_2021_2908_1.jpg">
     <meta property="og:title" content="Mercedes">
     <meta property="og:url" content="https://senegal-auto.herokuapp.com/voiture/mercedes-level-vitesse-2908">
@@ -213,9 +221,9 @@
                 <div id="text_partager" class="ml-5-lg ml-3-sm font-weight-bold mb-3 text-muted">Partager : </div>
                 <div id="reseaux_sociaux_icon" class="d-flex justify-content-start">
                     <a href="http://www.facebook.com/sharer/sharer.php?u=http://192.168.42.61:9999/details_voiture/1#mercedes_bmw&amp;title=Un nouveau mercedes BMW toute neuve" title="sur facebook"><img src="/icon_logo/facebook.svg" alt="facebook icon" class="mr-5"></a>
-                    <a href="" title="sur twitter"><img src="/icon_logo/twitter.svg" alt="twitter icon" class="mr-5"></a>
+                    <a href="https://twitter.com:/intent/tweet?text=Une voiture d'occasion a vendre chez senegal-auto&url=https://senegal-auto.herokuapp.com/voiture/mercedes-level-vitesse-2908" title="sur twitter"><img src="/icon_logo/twitter.svg" alt="twitter icon" class="mr-5"></a>
                     <a href="" title="sur instagram"><img src="/icon_logo/Instagram.svg" alt="instagram icon" class="mr-5"></a>
-                    <a href="whatsapp://send?text=https://senegal-auto.herokuapp.com/voiture/mercedes-level-vitesse-2908" target="_blank" data-action="share/whatsapp/share" title="Un nouvelle voiture toute neuve !"><img src="/icon_logo/whatsapp.svg" alt="whatsapp icon"></a>
+                    <a href="whatsapp://send?text=Une voiture d'occasion a vendre chez senegal-auto&url=https://senegal-auto.herokuapp.com/voiture/mercedes-level-vitesse-2908" target="_blank" data-action="share/whatsapp/share" title="Un nouvelle voiture toute neuve !"><img src="/icon_logo/whatsapp.svg" alt="whatsapp icon"></a>
                 </div>
 
             </div>
