--- a/views/v3.html
+++ b/views/v3.html
@@ -5,10 +5,11 @@
     <meta name="description" content="Carburant: Essence, Boite vitesse: Automatic, Annee: 2014, Occasion">
 
     <!-- share twitter -->
-    <meta name="twitter:card" content="summary">
+    <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="AMERICAN BLUE CAR">
-    <meta name="twitter:description" content="A VENDRE SUR TERANGA-SENGAL">
-    <meta name="twitter:image" content="https://senegal-auto.herokuapp.com/our_vehicule/02_04_2021_5562_1.jpg">
+    <meta name="twitter:description" content="Une voiture neuf a vendre chez senegal-auto">
+    <meta name="twitter:image" itemprop="image" content="https://senegal-auto.herokuapp.com/our_vehicule/02_04_2021_5562_1.jpg">
+    <meta name="twitter:image:alt" content="annee:2016, kilometrage:200 000km, carburant:Diesel">
     <meta name="twitter:url" content="https://senegal-auto.herokuapp.com/voiture/208-gt-suedois-5562">
     <meta name="twitter:creator" content="Djiby Sarr">
 
@@ -234,9 +235,9 @@
                 <div id="text_partager" class="ml-5-lg ml-3-sm font-weight-bold mb-3 text-muted">Partager : </div>
                 <div id="reseaux_sociaux_icon" class="d-flex justify-content-start">
                     <a href="http://www.facebook.com/sharer/sharer.php?u=http://192.168.42.61:9999/details_voiture/1#mercedes_bmw&amp;title=Un nouveau mercedes BMW toute neuve" title="sur facebook"><img src="/icon_logo/facebook.svg" alt="facebook icon" class="mr-5"></a>
-                    <a href="https://twitter.com:/intent/tweet?url=https://senegal-auto.herokuapp.com/voiture/208-gt-suedois-5562&text=AMERICAN BLUE CAR MODEL" title="sur twitter"><img src="/icon_logo/twitter.svg" alt="twitter icon" class="mr-5"></a>
+                    <a href="https://twitter.com:/intent/tweet?text=AMERICAN BLUE CAR MODEL&url=https://senegal-auto.herokuapp.com/voiture/208-gt-suedois-5562" title="sur twitter"><img src="/icon_logo/twitter.svg" alt="twitter icon" class="mr-5"></a>
                     <a href="" title="sur instagram"><img src="/icon_logo/Instagram.svg" alt="instagram icon" class="mr-5"></a>
-                    <a href="whatsapp://send?text=https://senegal-auto.herokuapp.com/voiture/208-gt-suedois-5562" target="_blank" data-action="share/whatsapp/share" title="Un nouvelle voiture toute neuve !"><img src="/icon_logo/whatsapp.svg" alt="whatsapp icon"></a>
+                    <a href="whatsapp://send?text=AMERICAN BLUE CAR MODEL&url=https://senegal-auto.herokuapp.com/voiture/208-gt-suedois-5562" target="_blank" data-action="share/whatsapp/share" title="Un nouvelle voiture toute neuve !"><img src="/icon_logo/whatsapp.svg" alt="whatsapp icon"></a>
                 </div>
 
             </div>
