--- a/views/v4.html
+++ b/views/v4.html
@@ -232,7 +232,7 @@
                     <a href="http://www.facebook.com/sharer/sharer.php?u=http://192.168.42.61:9999/details_voiture/1#mercedes_bmw&amp;title=Un nouveau mercedes BMW toute neuve" title="sur facebook"><img src="/icon_logo/facebook.svg" alt="facebook icon" class="mr-5"></a>
                     <a href="https://twitter.com:/intent/tweet?text=Une voiture neuf a vendre chez senegal-auto&url=https://senegal-auto.herokuapp.com/voiture/american-great-teager-car-5948" title="sur twitter"><img src="/icon_logo/twitter.svg" alt="twitter icon" class="mr-5"></a>
                     <a href="" title="sur instagram"><img src="/icon_logo/Instagram.svg" alt="instagram icon" class="mr-5"></a>
-                    <a href="whatsapp://send?text=Une voiture neuf a vendre chez senegal-auto&url=https://senegal-auto.herokuapp.com/american-great-teager-car-5948" target="_blank" data-action="share/whatsapp/share" title="Un nouvelle voiture toute neuve !"><img src="/icon_logo/whatsapp.svg" alt="whatsapp icon"></a>
+                    <a href="whatsapp://send?text=https://senegal-auto.herokuapp.com/american-great-teager-car-5948" target="_blank" data-action="share/whatsapp/share" title="Un nouvelle voiture toute neuve !"><img src="/icon_logo/whatsapp.svg" alt="whatsapp icon"></a>
                 </div>
 
             </div>
