--- a/views/v7.html
+++ b/views/v7.html
@@ -1,4 +1,4 @@
-v<html lang="fr" class="fontawesome-i2svg-active fontawesome-i2svg-complete"><head>
+<html lang="fr" class="fontawesome-i2svg-active fontawesome-i2svg-complete"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Djiby Sarr">
