--- a/views/v1.html
+++ b/views/v1.html
@@ -232,9 +232,9 @@
                 <div id="text_partager" class="ml-5-lg ml-3-sm font-weight-bold mb-3 text-muted">Partager : </div>
                 <div id="reseaux_sociaux_icon" class="d-flex justify-content-start">
                     <a href="facebook://send?text=https://senegal-auto.herokuapp.com/voiture/kia-level-18-2728" title="sur facebook"><img src="/icon_logo/facebook.svg" alt="facebook icon" class="mr-5"></a>
-                    <a href="https://twitter.com:/intent/tweet?text=Kia Sportage a vendre a bas prix&url=https://senegal-auto.herokuapp.com/voiture/kia-level-18-2728text=Kia Sportage a vendre a bas prix" title="sur twitter"><img src="/icon_logo/twitter.svg" alt="twitter icon" class="mr-5"></a>
+                    <a href="https://twitter.com:/intent/tweet?text=Kia Sportage a vendre a bas prix&url=https://senegal-auto.herokuapp.com/voiture/kia-level-18-2728" title="sur twitter"><img src="/icon_logo/twitter.svg" alt="twitter icon" class="mr-5"></a>
                     <a href="instagram://send?text=https://senegal-auto.herokuapp.com/voiture/kia-level-18-2728" title="sur instagram"><img src="/icon_logo/Instagram.svg" alt="instagram icon" class="mr-5"></a>
-                    <a href="whatsapp://send?text=Kia Sportage a vendre a bas prix&url=https://senegal-auto.herokuapp.com/voiture/kia-level-18-2728" target="_blank" data-action="share/whatsapp/share" title="Un nouvelle voiture toute neuve !"><img src="/icon_logo/whatsapp.svg" alt="whatsapp icon"></a>
+                    <a href="whatsapp://send?text=https://senegal-auto.herokuapp.com/voiture/kia-level-18-2728" target="_blank" data-action="share/whatsapp/share" title="Un nouvelle voiture toute neuve !"><img src="/icon_logo/whatsapp.svg" alt="whatsapp icon"></a>
                 </div>
 
             </div>
