--- a/views/v7.html
+++ b/views/v7.html
@@ -9,6 +9,8 @@
     <meta name="twitter:title" content="RED CHAMPION 2020">
     <meta name="twitter:description" content="Une voiture neuf a vendre chez senegal-auto">
     <meta name="twitter:image" itemprop="image" content="https://senegal-auto.herokuapp.com/our_vehicule/02_04_2021_1257_1.jpg">
+    <meta property="twitter:image:width" content="1000">
+    <meta property="twitter:image:height" content="500">
     <meta name="twitter:url" content="https://senegal-auto.herokuapp.com/voiture/red-champion-2020-1257">
 
     <!-- whatsapp share -->
@@ -101,7 +103,7 @@
             <div class="mb-5"><!--1-->
                 <div id="container_car_description">
                     <div class="d-flex justify-content-center align-items-center py-1 px-2">
-                        <img src="/our_vehicule/02_04_2021_1257_2.jpg" alt="RED CHAMPION 2020" id="photo_du_vehicule" nombre-photos="7" class="rounded">
+                        <img src="/our_vehicule/02_04_2021_1257_1.jpg" alt="RED CHAMPION 2020" id="photo_du_vehicule" nombre-photos="7" class="rounded">
                     </div>
                     <div class="">
                         <div class="mt-3 mb-4">
@@ -236,7 +238,7 @@
                 <div id="reseaux_sociaux_icon" class="d-flex justify-content-start">
                     <a href="https://m.facebook.com/sharer.php?u=https://senegal-auto.herokuapp.com/voiture/red-champion-2020-1257&t=Une voiture neuf a vendre chez senegal-auto" title="sur facebook"><img src="/icon_logo/facebook.svg" alt="facebook icon" class="mr-5"></a>
                     <a href="https://twitter.com:/intent/tweet?text=Une voiture neuf a vendre chez senegal-auto&url=https://senegal-auto.herokuapp.com/voiture/red-champion-2020-1257" title="sur twitter"><img src="/icon_logo/twitter.svg" alt="twitter icon" class="mr-5"></a>
-                    <a href="https://m.instagram.com/sharer.php?u=https://senegal-auto.herokuapp.com/voiture/red-champion-2020-1257&t=Une voiture neuf a vendre chez senegal-auto" title="sur instagram"><img src="/icon_logo/Instagram.svg" alt="instagram icon" class="mr-5"></a>
+                    <a href="https://m.instagram.com/?u=https://senegal-auto.herokuapp.com/voiture/red-champion-2020-1257&t=Une voiture neuf a vendre chez senegal-auto" title="sur instagram"><img src="/icon_logo/Instagram.svg" alt="instagram icon" class="mr-5"></a>
                     <a href="whatsapp://send?text=https://senegal-auto.herokuapp.com/voiture/red-champion-2020-1257" target="_blank" data-action="share/whatsapp/share" title="Un nouvelle voiture toute neuve !"><img src="/icon_logo/whatsapp.svg" alt="whatsapp icon"></a>
                 </div>
 
