--- a/views/v3.html
+++ b/views/v3.html
@@ -9,7 +9,8 @@
     <meta name="twitter:title" content="AMERICAN BLUE CAR">
     <meta name="twitter:description" content="Une voiture neuf a vendre chez senegal-auto">
     <meta name="twitter:image" itemprop="image" content="https://senegal-auto.herokuapp.com/our_vehicule/02_04_2021_5562_1.jpg">
-    <meta name="twitter:image:alt" content="annee:2016, kilometrage:200 000km, carburant:Diesel">
+    <meta property="twitter:image:width" content="1000">
+    <meta property="twitter:image:height" content="500">
     <meta name="twitter:url" content="https://senegal-auto.herokuapp.com/voiture/208-gt-suedois-5562">
     <meta name="twitter:creator" content="Djiby Sarr">
 
@@ -238,7 +239,7 @@
                 <div id="reseaux_sociaux_icon" class="d-flex justify-content-start">
                     <a href="https://m.facebook.com/sharer.php?u=https://senegal-auto.herokuapp.com/voiture/208-gt-suedois-5562&t=Une voiture neuf a vendre chez senegal-auto" title="sur facebook"><img src="/icon_logo/facebook.svg" alt="facebook icon" class="mr-5"></a>
                     <a href="https://twitter.com:/intent/tweet?text=AMERICAN BLUE CAR MODEL&url=https://senegal-auto.herokuapp.com/voiture/208-gt-suedois-5562" title="sur twitter"><img src="/icon_logo/twitter.svg" alt="twitter icon" class="mr-5"></a>
-                    <a href="https://m.instagram.com/sharer.php?u=https://senegal-auto.herokuapp.com/voiture/208-gt-suedois-5562&t=Une voiture neuf a vendre chez senegal-auto" title="sur instagram"><img src="/icon_logo/Instagram.svg" alt="instagram icon" class="mr-5"></a>
+                    <a href="https://m.instagram.com/?u=https://senegal-auto.herokuapp.com/voiture/208-gt-suedois-5562&t=Une voiture neuf a vendre chez senegal-auto" title="sur instagram"><img src="/icon_logo/Instagram.svg" alt="instagram icon" class="mr-5"></a>
                     <a href="whatsapp://send?text=https://senegal-auto.herokuapp.com/voiture/208-gt-suedois-5562" target="_blank" data-action="share/whatsapp/share" title="Un nouvelle voiture toute neuve !"><img src="/icon_logo/whatsapp.svg" alt="whatsapp icon"></a>
                 </div>
 
